# Driverless

driverless-23-24-20231223T123532Z-001/driverless-23-24/devel/: .catkin  .rosinstall  local_setup.sh
driverless-23-24-20231223T123532Z-001/driverless-23-24/devel/include/ytu_racing_msgs/: Command.h  Cone.h  ConeArray.h  Track.h  TrackCone.h  Waypoint.h  WaypointsArray.h
driverless-23-24-20231223T123532Z-001/driverless-23-24/devel/lib/perception/: lidar_scan_to_cone_pos
driverless-23-24-20231223T123532Z-001/driverless-23-24/devel/lib/pkgconfig/: ma_rrt_path_plan.pc  motion_planing.pc  path_planing.pc  perception.pc  rplidar_ros.pc  slam.pc  slow_lap.pc  vehicle_msgs.pc  ytu_racing.pc  (+1 more)
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/: run.sh
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/motion_planing/: CMakeLists.txt
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/path_planing/: CMakeLists.txt
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/perception/: CMakeLists.txt  package.xml
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/slam/: CMakeLists.txt  package.xml
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/slow_lap/: CMakeLists.txt
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/ytu_racing/: CMakeLists.txt  package.xml
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/ytu_racing_msgs/: CMakeLists.txt  package.xml
driverless-23-24-20231223T123532Z-001/driverless-23-24/src/ytu_racing_msgs/msg/: Cone.msg  ConeArray.msg  Track.msg  WaypointsArray.msg
(+62 files in other folders)
